wishlist page image strech fix and cart image alignment fix

--- a/src/css/user/userstyle.css
+++ b/src/css/user/userstyle.css
@@ -3299,6 +3299,7 @@ background-color: #eaf8ff !important;
   width: 100%;
   height: 201px !important;
   max-width: 270px;
+  object-fit: cover;
 }
 
 .wishlist-item .details {
@@ -5273,7 +5274,7 @@ CHECKOUT PAGE
 
 .main-wrapper .cart-details .cart-item {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   margin-bottom: 10px;
   padding: 8px;
   background: #fff;
